syntax = "proto3";

package pb2;
option java_package = "ir.ms.pb";
option java_multiple_files = true;
option optimize_for = LITE_RUNTIME; //CODE_SIZE;
option go_package = "x";

message Event {
    int64 event_id = 1;
    int32 event_type = 2;
    int64 by_user_id = 3;
    int64 peer_user_id = 4;
    int64 post_id = 5;
    int64 comment_id = 6;
    int64 hash_tag_id = 7;
    int64 group_id = 8;
    int64 action_id = 9;
    int64 chat_id = 10;
    string chat_key = 11;
    int64 message_id = 12;
    int64 re_shared_id = 13;
    int64 murmur64_hash = 14;
}

message PB_Notify {
  int64 notify_id = 1;
  int32 for_user_id = 2;
  int32 actor_user_id = 3;
  int32 notify_type = 4;
  int64 post_id = 5;
  int64 comment_id = 6;
  int32 peer_user_id = 7;
  int64 murmur64_hash = 8;
  int32 seen_status = 9;
  int32 created_time = 10;
}

message Invoke {
  uint32 namespace = 6;
  uint32 method = 1;
  uint64 action_id = 2;
  bool is_response = 3;
  bytes rpc_data = 4;
}
